# BlazeAlert

./: README.md
.github/actions/esp-idf-with-node/: Dockerfile  action.yml
.github/workflows/: build.yml
esp32/: CMakeLists.txt  main.cpp  sdkconfig.defaults
esp32/main/: CMakeLists.txt  main.cpp
web/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
web/src/components/: layout.tsx  login-form.tsx  map-provider.tsx  map.tsx  no-ssr.tsx
web/src/components/charts/: fire-incidents.tsx  resolved.tsx  response-time.tsx
web/src/components/data-table/: data-table.tsx  devices.tsx
web/src/pages/: _app.tsx
web/src/pages/devices/: index.tsx
web/src/pages/home/: index.tsx
web/src/pages/list/: index.tsx
web/src/pages/map/: index.tsx
web/src/pages/statistics/: index.tsx
web/src/styles/: globals.css
